project(
    'CPP Set example',
    'cpp',
    default_options: {
        'cpp_std': 'c++23',
        'warning_level': '3',
        'werror': true,
    },
    version: '2.0.0',
    meson_version: '>=1.2.0',
)

executable('main', files('main.cpp'), include_directories: include_directories('classes'))
